figure align issue in post fix

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -540,7 +540,7 @@ article.page, article.post, article.albumreviews, article.concertreviews, articl
                 color: #818a91;
             }
             &.alignnone {
-                margin-left: 72px;
+                margin-left: 15rem;
                 @media screen and (max-width: $SM) {
                     margin: 0;
                 }
